tests/ui/macros/issue-83340.stderr
error: 1 positional argument in format string, but no arguments were given
  --> $DIR/issue-83340.rs:6:4
   |
LL | \n {} │",
   |    ^^

error: aborting due to 1 previous error

